JavaDoc reviewed